<resources>
    <string name="app_name" translatable="false">Kaira</string>
    <string name="app_name_staging" translatable="false">(S) Kaira</string>
    <string name="app_name_development" translatable="false">(D) Kaira</string>
    <string name="app_name_local" translatable="false">(L) Kaira</string>
    <string name="app_base_url_staging" translatable="false">api.staging.kaira.ai</string>
    <string name="app_base_url_development" translatable="false">api.dev.kaira.ai</string>
    <string name="app_base_url_production" translatable="false">api.kaira.ai</string>
    <string name="app_sentry_url_staging" translatable="false">https://fd9811d56e3845c4ba7ecaaa9e537102@o583579.ingest.sentry.io/5738060</string>
    <string name="app_sentry_url_development" translatable="false">https://793279277d4547bdb721b65f16ce8503@o583579.ingest.sentry.io/5738053</string>
    <string name="app_sentry_url_production" translatable="false">https://c321b64b677b4d3291fb5c9ffd6cbac8@o583579.ingest.sentry.io/5738062</string>
    <string name="action_login">Login</string>
    <string name="action_create_account">Create an account</string>
    <string name="action_skip">Skip</string>
    <string name="action_validate">Validate</string>
    <string name="action_start">Start</string>
    <string name="action_next">Next</string>
    <string name="action_continue">Continue</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_send">Send</string>
    <string name="action_resend">Resend</string>
    <string name="action_reset">Reset</string>
    <string name="action_email_send_again">Send another email \u2192</string>
    <string name="action_confirm">Confirm</string>
    <string name="action_details">Details</string>
    <string name="action_finish">Finish</string>
    <string name="action_information">More information</string>
    <string name="action_yes">Yes</string>
    <string name="action_no">No</string>
    <string name="action_survey">Survey</string>
    <string name="action_logout">Logout</string>
    <string name="action_add">Add</string>
    <string name="action_modify">Modify</string>
    <string name="action_retry">Retry</string>
    <string name="action_erase">Erase</string>
    <string name="action_search">Search</string>
    <string name="warning">Warning</string>
    <string name="no_email_application_installed">There is no email client installed.</string>
    <string name="onboarding_title_1">The app to achieve your financial well-being</string>
    <string name="onboarding_description_1">I\'m Kaira, your personal financial coach. I am first interested in you, your emotions, your behaviors and your motivations.</string>
    <string name="onboarding_title_2">A personalized experience</string>
    <string name="onboarding_description_2">Taking into account what money means to you, I support you in becoming aware of your financial behaviors.</string>
    <string name="onboarding_title_3">Concrete results</string>
    <string name="onboarding_description_3">Together, we will achieve your financial well-being:\n\n \u2022 Be in good financial health.\n \u2022 Live more serenely with your money.\n \u2022 Develop your knowledge.</string>
    <string name="terms_title">Terms of Use and Privacy Policy</string>
    <string name="terms_message">Before you start, read the terms of use and our privacy policy.</string>
    <string name="terms_approve">I read and I accept Kaira\'s terms of use and privacy policy.</string>
    <string name="terms_use">Terms of Use</string>
    <string name="terms_privacy">Privacy Policy</string>
    <string name="introduction_welcome_title">We\'re almost there!</string>
    <string name="introduction_welcome_description">I am your front-line partner through the whole app\'s experience. What\'s your first name?</string>
    <string name="introduction_welcome_next">Let\'s get started! \u2192</string>
    <string name="introduction_assessment_title_1">It\'s your turn now %1$s!</string>
    <string name="introduction_assessment_title_2">The first evaluation is completed!</string>
    <string name="introduction_assessment_title_3">Both evaluations are completed!</string>
    <string name="introduction_assessment_detail_1">Help me optimize your experience and personalize my coaching. Respond to the evaluations below:</string>
    <string name="introduction_assessment_detail_2">Now please click and respond to the 2nd one!</string>
    <string name="introduction_assessment_detail_3">Now please proceed!</string>
    <string name="ok">OK</string>
    <string name="attention">Attention</string>
    <string name="error_network">Your internet connection is not stable. Please correct the situation before continuing.</string>
    <string name="action_assessment_start">Start the test</string>
    <string name="assessment_psychological_title">Your motivation for money</string>
    <string name="assessment_financial_title">Your financial assessment</string>
    <string name="assessment_computation_title">I\'m calculating your result</string>
    <string name="assessment_computation_message">Thank you for your patience…</string>
    <string name="psychological_assessment_disclaimer">This assessment was developed in partnership with the University of Sherbrooke.</string>
    <string name="financial_assessment_disclaimer">This assessment uses the FinHealth Score® from the Financial Health Network</string>
    <string name="psychological_profile_type_social_status">Social status</string>
    <string name="psychological_profile_type_autonomy">Autonomy</string>
    <string name="psychological_profile_type_benevolence">Benevolence</string>
    <string name="psychological_profile_type_hedonism">Hedonism</string>
    <string name="psychological_profile_description_social_status">The social status dimension refers to an individual for whom money means success, influence and a high social position.</string>
    <string name="psychological_profile_description_autonomy">The autonomy dimension refers to an individual for whom money means freedom, financial security and stability.</string>
    <string name="psychological_profile_description_benevolence">The benevolence dimension is said of a person for whom money represents a means of helping those close to them.</string>
    <string name="psychological_profile_description_hedonism">The hedonism dimension is said of a person for whom money is a way to fulfill their desires and to have fun.</string>
    <string name="psychological_profile_result_title">Your motivation for money</string>
    <string name="psychological_profile_detail_title">Brief description of the different motivation profiles in the face of money according to the responses</string>
    <string name="financial_profile_type_spending">Spendings</string>
    <string name="financial_profile_type_saving">Savings</string>
    <string name="financial_profile_type_deposit">Deposit</string>
    <string name="financial_profile_type_mortgage">Mortgage</string>
    <string name="financial_profile_type_retirement">Retirement</string>
    <string name="financial_profile_type_creditcard">Credit Card</string>
    <string name="financial_profile_type_loan">Loan</string>
    <string name="financial_profile_type_investment">Investment</string>
    <string name="financial_profile_type_otherregisteredaccount">Other Registered</string>
    <string name="financial_profile_type_other">Other</string>
    <string name="financial_profile_type_credit">Borrowings</string>
    <string name="financial_profile_type_planning">Planning</string>
    <string name="financial_profile_result_title">Your results</string>
    <string name="financial_profile_detail_title">Brief description of the results of possible financial portraits according to the answers.</string>
    <string name="financial_profile_title_good">You\'re financially healthy</string>
    <string name="financial_profile_title_ok">You\'re making it financially</string>
    <string name="financial_profile_title_bad">You\'re financially vulnerable</string>
    <string name="financial_profile_description_good">Your situation is healthy in all financial health indicators.</string>
    <string name="financial_profile_description_ok">Your situation is relatively good. However, you could improve some financial health indicators.</string>
    <string name="financial_profile_description_bad">Your situation requires significant effort in several financial health indicators.</string>
    <string name="introduction_conclusion_strategy_title">Your evaluations are completed</string>
    <string name="introduction_conclusion_strategy_detail_title">Why this strategy?</string>
    <string name="introduction_conclusion_strategy_detail_description">Are you interested?</string>
    <string name="introduction_conclusion_account_title">Awesome! On the road to your financial well-being!</string>
    <string name="introduction_conclusion_account_subtitle">Creating your account allows you to:</string>
    <string name="introduction_conclusion_account_assessments">Save your evaluations</string>
    <string name="introduction_conclusion_account_coach">Access my personalized coaching</string>
    <string name="authentication_creation_welcome_title">Create a free Kaira account</string>
    <string name="authentication_creation_welcome_description">By creating a Kaira account, you can optimize your experience and permanently save your bank details. In this case, they will be erased after 24 hours.\n\nYou can also create an account without synchronizing your bank details.</string>
    <string name="authentication_creation_identity_title">Account creation</string>
    <string name="authentication_creation_identity_description">Complete this information to create your account</string>
    <string name="authentication_creation_identity_create">Create Account</string>
    <string name="authentication_creation_identity_already_exist">This email is already used for a Kaira account</string>
    <string name="authentication_creation_group_invalide">The code is not valid. Continue anyway?</string>
    <string name="authentication_first_name_title">First Name</string>
    <string name="authentication_last_name_title">Last Name</string>
    <string name="authentication_creation_group_title">Group code (optional)</string>
    <string name="authentication_creation_group_rules">Consists of 4 letters and 4 numbers</string>
    <string name="authentication_action_next">Next \u2192</string>
    <string name="authentication_email_title">Email</string>
    <string name="authentication_password_title">Password</string>
    <string name="introduction_conclusion_survey_title">Doesn\'t that interest you?</string>
    <string name="banking_onboarding_title">I invite you now to synchronize your bank accounts</string>
    <string name="banking_onboarding_description">Your confidence and peace of mind are a priority for me. Kaira is a confidential and secure application.</string>
    <string name="banking_onboarding_decline_button">I don\'t want to synchronize my bank accounts</string>
    <string name="banking_onboarding_declined_warning">Syncing your bank accounts is required for the full Kaira experience. Following the study of your data, I can offer you the best strategy adapted to your needs.</string>
    <string name="banking_onboarding_declined_sync_button">Synchronize my accounts</string>
    <string name="banking_onboarding_declined_survey">Don\’t want to continue? Please fill out the short survey to tell me why.\n\nSince you created a Kaira account, you can come back anytime. Together, we can get you back on the road to financial well-being.\n\nThank you and best wishes.</string>
    <string name="banking_institutions_connection_success">The process is underway!</string>
    <string name="banking_institutions_connection_success_add_other">Do you want to synchronize another account?</string>
    <string name="tick" translatable="false">\u2713</string>
</resources>