<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp">

        <ImageView
            android:id="@+id/institution_im"
            android:layout_width="80dp"
            android:layout_height="80dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/investdirect"
            android:layout_marginTop="104dp"/>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/yes_btn"
            style="@style/Text03_button"
            android:layout_width="120dp"
            android:layout_height="55dp"
            android:layout_marginTop="52dp"
            android:text="@string/action_yes"
            android:textColor="@android:color/white"
            app:cornerRadius="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView27" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/no_btn"
            style="@style/Text02_button"
            android:layout_width="120dp"
            android:layout_height="45dp"
            android:background="@drawable/blue_button_border"
            android:gravity="center"
            android:text="@string/action_no"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/yes_btn" />


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/success_tv"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="56dp"
            android:background="@drawable/kaira_cirle_tick"
            android:fontFamily="@font/avenir_next_bold"
            android:gravity="center"
            android:text="@string/tick"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/institution_im" />

        <TextView
            android:id="@+id/textView26"
            style="@style/Text01"
            android:layout_width="0dp"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:text="@string/banking_institutions_connection_success"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/success_tv" />

        <TextView
            android:textColor="@android:color/black"
            android:id="@+id/textView27"
            style="@style/Text04"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:textStyle="bold"
            android:text="@string/banking_institutions_connection_success_add_other"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.492"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView26" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
