<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ScrollView
        android:layout_height="match_parent"
        android:layout_width="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="24dp"
            tools:context=".banking.onboard.BankAccountInvitationActivity">

            <ImageView
                android:id="@+id/back_btn"
                android:layout_width="25dp"
                android:layout_height="25dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:visibility="gone"
                app:srcCompat="@drawable/ic_back_button" />


            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginTop="40dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/back_btn"
                app:srcCompat="@drawable/icon_coach" />

            <TextView
                android:id="@+id/textView2"
                style="@style/Heading01"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/banking_onboarding_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView2"
                android:layout_marginTop="30dp"/>

            <TextView
                android:id="@+id/text01"
                style="@style/Text01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/banking_onboarding_description"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2"
                android:layout_marginTop="30dp"/>



            <com.google.android.material.button.MaterialButton
                android:id="@+id/continue_button"
                style="@style/Text03_button"
                android:layout_width="200dp"
                android:layout_height="55dp"
                android:layout_marginTop="40dp"
                android:text="@string/action_continue"
                android:textColor="@android:color/white"
                android:visibility="visible"
                app:cornerRadius="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text01" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/more_info_button"
                style="@style/Text02_button"
                android:layout_width="200dp"
                android:layout_height="45dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/blue_button_border"
                android:gravity="center"
                android:text="@string/action_information"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/continue_button" />

            <TextView
                android:layout_marginTop="50dp"
                android:id="@+id/no_button"
                style="@style/Text02_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/banking_onboarding_decline_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/more_info_button" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>
