<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".banking.onboard.BankAccountConnectLastChanceActivity"
            android:padding="24dp">

            <ImageView
                android:id="@+id/back_btn"
                android:layout_width="25dp"
                android:layout_height="25dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_back_button" />


            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginTop="40dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/back_btn"
                app:srcCompat="@drawable/icon_coach" />

            <TextView
                android:id="@+id/textView2"
                style="@style/Heading01"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:text="@string/introduction_conclusion_survey_title"
                app:layout_constraintBottom_toBottomOf="@+id/imageView2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView2"
                app:layout_constraintTop_toTopOf="@+id/imageView2"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/textView6"
                style="@style/Text01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/banking_onboarding_declined_warning"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView2" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/connect_bank_account_button"
                style="@style/Text03_button"
                android:layout_width="wrap_content"
                android:layout_height="55dp"
                android:layout_marginTop="12dp"
                app:cornerRadius="8dp"
                android:text="@string/banking_onboarding_declined_sync_button"
                android:textColor="@android:color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView6" />

            <TextView
                style="@style/Text01"
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:text="@string/banking_onboarding_declined_survey"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/connect_bank_account_button" />


            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/survey_button"
                style="@style/Text02_button"
                android:layout_width="170dp"
                android:layout_height="45dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/blue_button_border"
                android:gravity="center"
                android:text="@string/action_survey"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView7" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</layout>