<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".assessment.PsychologicalAssessmentResultActivity"
            android:padding="24dp">

            <ImageView
                android:id="@+id/back_btn"
                android:layout_width="25dp"
                android:layout_height="25dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_back_button" />

            <ImageView
                android:id="@+id/close_btn"
                android:layout_width="30dp"
                android:layout_height="30dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_close_button" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="40dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/back_btn"
                app:srcCompat="@drawable/icon_coach" />


            <TextView
                android:id="@+id/textView2"
                style="@style/Heading01"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:text="@string/psychological_profile_result_title"
                app:layout_constraintBottom_toBottomOf="@+id/imageView2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView2"
                app:layout_constraintTop_toTopOf="@+id/imageView2" />

            <ImageView
                android:id="@+id/psychological_image_view"
                android:layout_width="200dp"
                android:layout_height="150dp"
                android:layout_marginTop="24dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <TextView
                android:id="@+id/psychological_type_title_tv"
                style="@style/Heading01"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/psychological_profile_type_social_status"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/psychological_image_view" />

            <TextView
                android:id="@+id/psychological_type_description_tv"
                style="@style/Text01"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/psychological_profile_description_social_status"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/psychological_type_title_tv" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/submit_btn"
                style="@style/Text03_button"
                android:layout_width="200dp"
                android:layout_height="55dp"
                android:text="@string/action_next"
                android:textColor="@android:color/white"
                app:cornerRadius="8dp"
                android:layout_marginTop="24dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/psychological_type_description_tv" />


            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/detail_btn"
                style="@style/Text02_button"
                android:layout_width="200dp"
                android:layout_height="45dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/blue_button_border"
                android:gravity="center"
                android:text="@string/action_details"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/submit_btn" />

            <TextView
                android:id="@+id/assessment_disclaimer_tv"
                style="@style/Text04"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/psychological_assessment_disclaimer"
                app:layout_constraintTop_toBottomOf="@+id/detail_btn"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:textStyle="italic"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</layout>
